[package]
name = "cmdi-lat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv = "1.1.6"
time = "0.3.20"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.28", features = [ "serialize" ] }
